kubernetes/ingress/api.yaml
apiVersion: v1
kind: Pod
metadata:
    name: api-pod
    labels:
        app: apipod
spec:
    containers:
        - name: api-nginx-container
          image: nginx:latest
          resources:
              limits:
                  memory: "128Mi"
                  cpu: "500m"
          ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: api-service
spec:
    selector:
        app: apipod
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: NodePort
