kubernetes/ingress/app.yaml
apiVersion: v1
kind: Pod
metadata:
    name: app-pod
    labels:
        app: apppod
spec:
    containers:
        - name: app-nginx-container
          image: nginx:latest
          resources:
              limits:
                  memory: "128Mi"
                  cpu: "500m"
          ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: app-service
spec:
    selector:
        app: apppod
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: NodePort
